--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>[2.2.0,)</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>r09</version>
+		</dependency>
 	</dependencies>
 
 	<build>
